test: добавить базовые тесты и исправить CI/CD pipeline

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ python-dotenv>=1.0.1
 yandex-cloud-ml-sdk==0.2.3       # SDK для генерации изображений через Yandex
 schedule>=1.2.0                  # Планировщик задач
 pytz>=2023.3                     # Работа с часовыми поясами
+pytest>=8.0.0                    # Тестирование
